Update WORKER_URL to production endpoint

--- a/assessment.html
+++ b/assessment.html
@@ -330,7 +330,7 @@
 // ═══════════════════════════════════════════════════════════
 // CONFIGURATION — update WORKER_URL after deploying Worker
 // ═══════════════════════════════════════════════════════════
-const WORKER_URL = 'https://disc-paradigm-worker.YOUR-SUBDOMAIN.workers.dev';
+const WORKER_URL = 'https://disc-paradigm-worker.kishawhite6.workers.dev';
 
 // ═══════════════════════════════════════════════════════════
 // STATE
