Update WORKER_URL to the correct subdomain

--- a/admin.html
+++ b/admin.html
@@ -317,7 +317,7 @@
 // ═══════════════════════════════════════════════════════════
 // CONFIG — update with your actual Worker URL
 // ═══════════════════════════════════════════════════════════
-const WORKER_URL = 'https://disc-paradigm-worker.YOUR-SUBDOMAIN.workers.dev';
+const WORKER_URL = 'https://disc-paradigm-worker.kishawhite6.workers.dev';
 const ADMIN_PASSWORD_HASH = 'CHANGE_THIS_TO_YOUR_PASSWORD'; // Set in Worker, not here
 
 const STYLE_NAMES = { D:'Command', I:'Cohesion', S:'Stability', C:'Precision' };
